[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Levels/LevelAnimationStart.tres" type="Animation" id=1]
[ext_resource path="res://Scripts/PuzzleDual.gd" type="Script" id=2]
[ext_resource path="res://Scenes/PuzzlePiece.tscn" type="PackedScene" id=3]
[ext_resource path="res://Models/logo-2.obj" type="ArrayMesh" id=4]
[ext_resource path="res://Models/logo-4.obj" type="ArrayMesh" id=5]
[ext_resource path="res://Scenes/Levels/LevelAnimationNext.tres" type="Animation" id=6]

[node name="Puzzle" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 0 )
script = ExtResource( 2 )
offset_goal = Vector3( 1, 0, 1 )
offset_margin = 0.2

[node name="PuzzlePrim" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, -0.5 )
mesh = ExtResource( 5 )
rot_margin = 0.005
euler_start = Vector3( -1.804, -1.099, 0.963 )
euler_goal = Vector3( 0, 0, 0 )
enable_horizontal = true
h_scale = 0.002
enable_vertical = true
v_scale = 0.05
enable_translations = true
t_offset = Vector3( 0.5, 0, -0.5 )
t_scale = 0.025
t_limit_x = 1.5
t_limit_y = 1.0
selected = false
validation_delay = 1.0

[node name="PuzzleSec" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0.5 )
mesh = ExtResource( 4 )
rot_margin = 0.005
euler_start = Vector3( -0.496, 0.281, -0.609 )
euler_goal = Vector3( 0, 0, 0 )
enable_horizontal = true
h_scale = 0.002
enable_vertical = true
v_scale = 0.05
enable_translations = true
t_offset = Vector3( -0.5, 0, 0.5 )
t_scale = 0.02
t_limit_x = 1.5
t_limit_y = 1.0
selected = false
validation_delay = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/LevelAnimationNext = ExtResource( 6 )
anims/LevelAnimationStart = ExtResource( 1 )
[connection signal="moved" from="PuzzlePrim" to="." method="_on_PuzzlePrim_moved"]
[connection signal="moved" from="PuzzleSec" to="." method="_on_PuzzleSec_moved"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
